--- a/timesheet.html
+++ b/timesheet.html
@@ -42,7 +42,30 @@
     			<h3 class="panel-title">Employee Information</h3>
   			</div>
   			<div class="panel-body" id="infoForm">
-  				
+
+  				<form>
+
+				  <div class="form-group">
+				    <label for="name">Employee Name</label>
+				    <input type="text" class="form-control" id="name">
+				  </div>
+				  <div class="form-group">
+				    <label for="role">Role</label>
+				    <input type="text" class="form-control" id="role">
+				  </div>
+				  <div class="form-group">
+				    <label for="start-date">Start Date (DD/MM/YYYY)</label>
+				    <input type="text" class="form-control" id="start-date">
+				  </div>
+				  <div class="form-group">
+				    <label for="monthly-rate">Monthly Rate</label>
+				    <input type="text" class="form-control" id="monthly-rate">
+				  </div>
+
+				  <button type="submit" class="btn btn-default">Submit</button>  
+				  
+				</form>
+
   			</div>
 		</div> <!--end of panel div-->
 	</div> <!--end of row2-->
