--- a/timesheet.html
+++ b/timesheet.html
@@ -32,7 +32,38 @@
   			<div class="panel-heading">
     			<h3 class="panel-title">Current Employees</h3>
   			</div>
+
   			<div class="panel-body" id="currentEmployees">
+  				<table class="table">
+  					<thead>
+        				<tr>
+          					<th>Name</th>
+          					<th>Role</th>
+          					<th>Start Date</th>
+          					<th>Months Worked</th>
+          					<th>Monthly Rate ($)</th>
+          					<th>Total Billed ($)</th>
+        				</tr>
+      				</thead>
+      				<tbody>
+        				<tr>
+          					<td>Blah</td>
+          					<td>Blah</td>
+          					<td>Blah</td>
+          					<td>BLAH</td>
+          					<td>BLAH</td>
+          					<td>BLAH</td>
+       				 	</tr>
+       				 	<tr>
+          					<td>Blah</td>
+          					<td>Blah</td>
+          					<td>Blah</td>
+          					<td>BLAH</td>
+          					<td>BLAH</td>
+          					<td>BLAH</td>
+       				 	</tr>
+        
+				</table>
   			</div>
 		</div><!--end of panel div-->
 
