--- a/timesheet.html
+++ b/timesheet.html
@@ -62,8 +62,8 @@
 				    <input type="text" class="form-control" id="monthly-rate">
 				  </div>
 
-				  <button type="submit" class="btn btn-default">Submit</button>  
-				  
+				  <button type="submit" class="btn btn-default" id="submit-button">Submit</button>  
+
 				</form>
 
   			</div>
